Additional fixes for #151, #161 - support productTemplate as reference and id of the actual productTemplate as referenceId - create a new endpoint which returns all the metadata as GET /v4/projects/metadata
